update debian vagrant box config

--- a/PackerWorkShop/debian/http/preseed.cfg
+++ b/PackerWorkShop/debian/http/preseed.cfg
@@ -377,7 +377,7 @@ apt-mirror-setup apt-setup/use_mirror boolean true
 tasksel tasksel/first multiselect standard
 
 # Individual additional packages to install
-d-i pkgsel/include string openssh-server sudo hyperv-daemons snapd rsync curl apt-transport-https ca-certificates
+d-i pkgsel/include string openssh-server sudo hyperv-daemons rsync curl apt-transport-https ca-certificates git gnupg
 # Whether to upgrade packages after debootstrap.
 # Allowed values: none, safe-upgrade, full-upgrade
 # Whether to upgrade packages after debootstrap
