--- a/VagrantWorkShop/InfraSvc-Debian/Vagrantfile
+++ b/VagrantWorkShop/InfraSvc-Debian/Vagrantfile
@@ -31,7 +31,12 @@ Vagrant.configure("2") do |config|
 
   config.vm.hostname = "InfraSvc-Debian"
 
+  config.vm.synced_folder "../../AnsibleWorkShop", "/var/vagrant/AnsibleWorkShop", type: "rsync", rsync__auto: true
   config.vm.synced_folder "../../HelmWorkShop", "/var/vagrant/HelmWorkShop", type: "rsync", rsync__auto: true
+  config.vm.synced_folder "../../LocalWorkShop", "/var/vagrant/LocalWorkShop", type: "rsync", rsync__auto: true
+  
+  # Install Prerequest packages
+  config.vm.provision "shell", path: "Install-PreRquestPkg.sh"
 
   # Install helm
   config.vm.provision "shell", path: "Install-Helm.sh"
