update ansible k3s cluster deployment process

--- a/AnsibleWorkShop/Invoke-xanmanning.k3s.yml
+++ b/AnsibleWorkShop/Invoke-xanmanning.k3s.yml
@@ -1,10 +1,16 @@
 ---
 # ref https://github.com/squishykid/k3s-the-dumb-way/blob/master/ansible/main.yml
-- hosts: k3s_cluster
+- hosts: kube-0
   gather_facts: yes
+  roles:
+    - role: xanmanning.k3s
+      # https://docs.ansible.com/ansible/latest/user_guide/playbooks_variables.html#tips-on-where-to-set-variables
+      vars:
+        k3s_api_releases: rancher-mirror.oss-cn-beijing.aliyuncs.com/k3s/channels
+        k3s_github_download_url: rancher-mirror.oss-cn-beijing.aliyuncs.com/k3s
   vars:
-    k3s_github_download_url: "rancher-mirror.oss-cn-beijing.aliyuncs.com/k3s"
     k3s_etcd_datastore: true
+    k3s_become: true
     # https://github.com/PyratLabs/ansible-role-k3s/tree/v3_release#grouphost-variables
     # https://rancher.com/docs/k3s/latest/en/installation/install-options/server-config/
     k3s_server:
@@ -12,10 +18,3 @@
         - traefik
         - servicelb
         - local-storage
-  pre_tasks:
-    - name: Set each node to be a control node
-      ansible.builtin.set_fact:
-        k3s_control_node: true
-      when: inventory_hostname in groups['servers']
-  roles:
-    - role: xanmanning.k3s
