--- a/AnsibleWorkShop/inventory/AIO.yml
+++ b/AnsibleWorkShop/inventory/AIO.yml
@@ -1,6 +1,11 @@
 ---
 
 k3s_cluster:
+  vars:
+    # https://9to5answer.com/can-i-bypass-host-key-checking-in-ansible
+    # https://github.com/ansible/ansible/issues/49254
+    ansible_host_key_checking: False
+    ansible_ssh_host_key_checking: False
   hosts:
     kube-0:
       ansible_user: vagrant
