--- a/VagrantWorkShop/InfraSvc-Fedora/Vagrantfile
+++ b/VagrantWorkShop/InfraSvc-Fedora/Vagrantfile
@@ -31,7 +31,9 @@ Vagrant.configure("2") do |config|
   
   config.vm.hostname = "InfraSvc-Fedora"
 
-  config.vm.synced_folder "../../HelmWorkShop", "/vagrant/HelmWorkShop", type: "rsync", rsync__auto: true
+  config.vm.synced_folder "../../AnsibleWorkShop", "/var/vagrant/AnsibleWorkShop", type: "rsync", rsync__auto: true
+  config.vm.synced_folder "../../HelmWorkShop", "/var/vagrant/HelmWorkShop", type: "rsync", rsync__auto: true
+  config.vm.synced_folder "../../LocalWorkShop", "/var/vagrant/LocalWorkShop", type: "rsync", rsync__auto: true
 
   
   # config repo source
