--- a/AnsibleWorkShop/inventory/AIO.yml
+++ b/AnsibleWorkShop/inventory/AIO.yml
@@ -12,3 +12,10 @@ k3s_cluster:
       ansible_host: localhost
       ansible_python_interpreter: /usr/bin/python3
       ansible_ssh_private_key_file:  ~/.ssh/vagrant
+    kube-1:
+      ansible_user: vagrant
+      # https://riptutorial.com/ansible/example/5733/inventory-with-username-and-password
+      ansible_ssh_pass: vagrant
+      ansible_host: 192.168.255.31
+      ansible_python_interpreter: /usr/bin/python3
+      # ansible_ssh_private_key_file:  ~/.ssh/vagrant
