--- a/AnsibleWorkShop/builder/context/Containerfile
+++ b/AnsibleWorkShop/builder/context/Containerfile
@@ -10,8 +10,14 @@ ADD _build /build
 WORKDIR /build
 
 # https://groups.google.com/g/ansible-project/c/L2H6KSAF_o0
-RUN git config --global http.proxy $PROXY && git config --global https.proxy $PROXY && ansible-galaxy role install -r requirements.yml --roles-path "/usr/share/ansible/roles"
-RUN export https_proxy=${PROXY} && export http_proxy=${PROXY} && ANSIBLE_GALAXY_DISABLE_GPG_VERIFY=1 ansible-galaxy collection install $ANSIBLE_GALAXY_CLI_COLLECTION_OPTS -r requirements.yml --collections-path "/usr/share/ansible/collections"
+RUN git config --global http.proxy $PROXY && \
+    git config --global https.proxy $PROXY && \
+    ansible-galaxy role install -r requirements.yml --roles-path "/usr/share/ansible/roles" && \
+    git config --global unset http.proxy && \
+    git config --global unset https.proxy
+RUN export https_proxy=${PROXY} http_proxy=${PROXY} && \
+    ANSIBLE_GALAXY_DISABLE_GPG_VERIFY=1 ansible-galaxy collection install $ANSIBLE_GALAXY_CLI_COLLECTION_OPTS -r requirements.yml --collections-path "/usr/share/ansible/collections" && \
+    unset http_proxy https_proxy
 
 FROM $EE_BUILDER_IMAGE as builder
 
