--- a/AnsibleWorkShop/builder/context/Containerfile
+++ b/AnsibleWorkShop/builder/context/Containerfile
@@ -13,11 +13,12 @@ WORKDIR /build
 RUN git config --global http.proxy $PROXY && \
     git config --global https.proxy $PROXY && \
     ansible-galaxy role install -r requirements.yml --roles-path "/usr/share/ansible/roles" && \
-    git config --global unset http.proxy && \
-    git config --global unset https.proxy
-RUN export https_proxy=${PROXY} http_proxy=${PROXY} && \
+    git config --global --unset http.proxy && \
+    git config --global --unset https.proxy
+RUN export HTTPS_PROXY=${PROXY} HTTP_PROXY=${PROXY} && \
     ANSIBLE_GALAXY_DISABLE_GPG_VERIFY=1 ansible-galaxy collection install $ANSIBLE_GALAXY_CLI_COLLECTION_OPTS -r requirements.yml --collections-path "/usr/share/ansible/collections" && \
-    unset http_proxy https_proxy
+    unset HTTPS_PROXY && \
+    unset HTTP_PROXY
 
 FROM $EE_BUILDER_IMAGE as builder
 
