--- a/AnsibleWorkShop/builder/definition.yml
+++ b/AnsibleWorkShop/builder/definition.yml
@@ -10,4 +10,15 @@ build_arg_defaults:
 dependencies:
   galaxy: ../requirements.yml
   python: ../requirements.txt
-  # system: bindep.txt
+  system: ../bindep.txt
+
+additional_build_steps:
+  append: |
+    RUN export HTTPS_PROXY=${PROXY} HTTP_PROXY=${PROXY} && \
+      curl -L "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" -o /usr/local/bin/kubectl && \
+      ls -al /usr/local/bin/kubectl && \
+      chmod 0755 /usr/local/bin/kubectl && \
+      curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 && \
+      chmod 700 get_helm.sh && VERIFY_CHECKSUM=false bash ./get_helm.sh && rm -f ./get_helm.sh \
+      unset HTTPS_PROXY && \
+      unset HTTP_PROXY
