--- a/AnsibleWorkShop/roles/infra-kube-resources/tasks/Install-Dex.yml
+++ b/AnsibleWorkShop/roles/infra-kube-resources/tasks/Install-Dex.yml
@@ -55,7 +55,7 @@
         path: /etc/rancher/k3s/config.yaml
       register: configb64
 
-    - name: decode values
+    - name: decode and update values
       ansible.builtin.set_fact:
         # https://github.com/sangramrath/osodeploy-disconnected/blob/master/openshift-ansible/playbooks/openshift-master/private/set_network_facts.yml
         config: "{{ (configb64['content'] | b64decode | from_yaml | combine(newdata, recursive=True)) }}"
@@ -67,6 +67,15 @@
             - oidc-ca-file=/var/lib/rancher/k3s/server/tls/server-ca.crt
             - oidc-username-claim=email
             - oidc-groups-claim=groups
+
+    - name: Write yaml file
+      become: yes
+      ansible.builtin.copy:
+        # https://stackoverflow.com/questions/65139989/ansible-how-to-fix-to-nice-yaml-output-quotation-and-line-breaks
+        content: '{{ config | to_nice_yaml(indent=2) }}'
+        dest: /etc/rancher/k3s/config.yaml
+      notify:
+        - "Restart k3s service"
 
     # - name: update k3s service config
     #   become: yes
