--- a/AnsibleWorkShop/Invoke-KubeResource.yml
+++ b/AnsibleWorkShop/Invoke-KubeResource.yml
@@ -2,36 +2,76 @@
 ---
 - hosts: localhost
   gather_facts: true
+  vars: 
+    kube_node: "kube-1"
+    kubeconfig_path: "/var/kubeconfig.yaml"
+    ca_crt_path: "/var/lib/rancher/k3s/server/tls/server-ca.crt"
+    ca_key_path: "/var/lib/rancher/k3s/server/tls/server-ca.key"
   tasks:
-  - name: Get kubeconfig from remote host
-    ansible.builtin.slurp:
-      path: /etc/rancher/k3s/k3s.yaml
-    register: kubeconfigB64
-    delegate_to: kube-1
+    - name: Prepare kubeconfig
+      block:
+        - name: Get kubeconfig from remote host
+          ansible.builtin.slurp:
+            path: /etc/rancher/k3s/k3s.yaml
+          register: kubeconfigB64
+          delegate_to: "{{ kube_node }}"
 
-  - name: Decode kubeconfig
-    ansible.builtin.set_fact:
-      kubeconfig: "{{ (kubeconfigB64['content'] | b64decode | from_yaml) }}"
+        - name: Decode kubeconfig
+          ansible.builtin.set_fact:
+            kubeconfig: "{{ (kubeconfigB64['content'] | b64decode | from_yaml) }}"
+
+        - name: Update kubeconfig
+          # https://docs.ansible.com/ansible/latest/collections/ansible/utils/update_fact_module.html#ansible-collections-ansible-utils-update-fact-module
+          ansible.utils.update_fact:
+            updates:
+            - path: kubeconfig.clusters[0].cluster.server
+              # value: https://192.168.255.31:6443
+              # https://stackoverflow.com/questions/40027847/accessing-inventory-host-variable-in-ansible-playbook
+              # https://docs.ansible.com/ansible/latest/user_guide/playbooks_vars_facts.html#information-about-ansible-magic-variables
+              value: "https://{{ hostvars['kube-1'].ansible_host }}:6443"
+          register: updated
+
+        - name: Write yaml file
+          ansible.builtin.copy:
+            content: '{{ updated.kubeconfig | to_nice_yaml(indent=2) }}'
+            dest: "{{ kubeconfig_path }}"
+
+    - name: Prepare CA cert and key
+      block:
+        - name: Get ca crt from "{{ kube_node.ansible_host }}"
+          become: yes
+          ansible.builtin.slurp:
+            path: "{{ ca_crt_path }}"
+          register: crtEncoded
+          delegate_to: "{{ kube_node }}"
     
-  - name: Update kubeconfig
-    # https://docs.ansible.com/ansible/latest/collections/ansible/utils/update_fact_module.html#ansible-collections-ansible-utils-update-fact-module
-    ansible.utils.update_fact:
-      updates:
-      - path: kubeconfig.clusters[0].cluster.server
-        # value: https://192.168.255.31:6443
-        # https://stackoverflow.com/questions/40027847/accessing-inventory-host-variable-in-ansible-playbook
-        # https://docs.ansible.com/ansible/latest/user_guide/playbooks_vars_facts.html#information-about-ansible-magic-variables
-        value: "https://{{ hostvars['kube-1'].ansible_host }}:6443"
-    register: updated
+        - name: Get ca key from "{{ kube_node }}"
+          become: yes
+          ansible.builtin.slurp:
+            path: "{{ ca_key_path }}"
+          register: keyEncoded
+          delegate_to: "{{ kube_node }}"
 
-  - name: Write yaml file
-    ansible.builtin.copy:
-      content: '{{ updated.kubeconfig | to_nice_yaml(indent=2) }}'
-      dest: /var/kubeconfig.yaml
-      
-  - name: install k8s resources
-    ansible.builtin.include_role:
-      name: infra-kube-resources
-    vars:
-      kube_node: "kube-1"
-      kubeconfig_from_path: "/var/kubeconfig.yaml"
+    - name: Gather kube_node fact
+      block:
+        - name: get remote ip
+          ansible.builtin.setup:
+            filter: 
+              - 'ansible_eth0'
+          delegate_facts: true
+          delegate_to: "{{ kube_node }}"
+          register: kube_node_facts
+
+        - name: Get kube_node IP address
+          ansible.builtin.set_fact:
+            cluster_ip: "{{ kube_node_facts.ansible_facts.ansible_eth0.ipv4.address }}"
+
+        - name: output IP address
+          ansible.builtin.debug:
+            msg: "kube_node cluster_ip is {{ cluster_ip }}"
+
+    - name: invoke role
+      block: 
+        - name: install k8s resources
+          ansible.builtin.include_role:
+            name: infra-kube-resources
