--- a/AnsibleWorkShop/roles/infra-kube-resources/tasks/Confirm-KubeConfig.yml
+++ b/AnsibleWorkShop/roles/infra-kube-resources/tasks/Confirm-KubeConfig.yml
@@ -7,6 +7,7 @@
         kubeconfig: "{{ kubeconfig_path }}"
         context: default
       register: cluster_info
+
     - name: output info
       debug:
-        msg: "{{ info.connection }}"
+        msg: "{{ cluster_info.connection }}"
