--- a/AnsibleWorkShop/roles/infra-kube-resources/tasks/Install-Dex.yml
+++ b/AnsibleWorkShop/roles/infra-kube-resources/tasks/Install-Dex.yml
@@ -9,6 +9,7 @@
 
     - name: Install Dex helm chart
       kubernetes.core.helm:
+        kubeconfig: "{{ kubeconfig_path }}"
         chart_ref: dex/dex
         release_name: dex
         release_namespace: dex
@@ -43,39 +44,54 @@
         recurse: yes
       register: templates
 
-    - name: Dex additional resources (RBAC for dex "local admin" user)
+    - name: Apply Dex additional resources (RBAC for dex "local admin" user)
       kubernetes.core.k8s:
+        kubeconfig: "{{ kubeconfig_path }}"
         state: present
         template: "{{ item }}"
         namespace: dex
       with_items: "{{ templates.files | map(attribute='path') }}"
+      when: (dexHelm is succeeded)
       
-    - name: Get k3s config values
-      ansible.builtin.slurp: 
-        path: /etc/rancher/k3s/config.yaml
-      register: configb64
-
-    - name: decode and update values
-      ansible.builtin.set_fact:
-        # https://github.com/sangramrath/osodeploy-disconnected/blob/master/openshift-ansible/playbooks/openshift-master/private/set_network_facts.yml
-        config: "{{ (configb64['content'] | b64decode | from_yaml | combine(newdata, recursive=True)) }}"
+    - name: Output OIDC config info
       vars:
-        newdata:
-          kube-apiserver-arg:
-            - oidc-issuer-url={{ issuer }}
-            - oidc-client-id={{ staticClientID }}
-            - oidc-ca-file=/var/lib/rancher/k3s/server/tls/server-ca.crt
-            - oidc-username-claim=email
-            - oidc-groups-claim=groups
+        msg: |
+          dex deploy successed, please update kubernetes oidc config with below values:
+          - oidc-issuer-url={{ issuer }}
+          - oidc-client-id={{ staticClientID }}
+          - oidc-ca-file=<the ca crt file path in the control plane node>
+          - oidc-username-claim=email
+          - oidc-groups-claim=groups
+      ansible.builtin.debug: 
+        msg: "{{ msg.split('\n') }}"
+      when: (dexHelm is succeeded)
 
-    - name: Write yaml file
-      become: yes
-      ansible.builtin.copy:
-        # https://stackoverflow.com/questions/65139989/ansible-how-to-fix-to-nice-yaml-output-quotation-and-line-breaks
-        content: '{{ config | to_nice_yaml(indent=2) }}'
-        dest: /etc/rancher/k3s/config.yaml
-      notify:
-        - "Restart k3s service"
+    # - name: Get k3s config values
+    #   ansible.builtin.slurp: 
+    #     path: /etc/rancher/k3s/config.yaml
+    #   register: configb64
+
+    # - name: decode and update values
+    #   ansible.builtin.set_fact:
+    #     # https://github.com/sangramrath/osodeploy-disconnected/blob/master/openshift-ansible/playbooks/openshift-master/private/set_network_facts.yml
+    #     config: "{{ (configb64['content'] | b64decode | from_yaml | combine(newdata, recursive=True)) }}"
+    #   vars:
+    #     newdata:
+    #       kube-apiserver-arg:
+    #         - oidc-issuer-url={{ issuer }}
+    #         - oidc-client-id={{ staticClientID }}
+    #         - oidc-ca-file=/var/lib/rancher/k3s/server/tls/server-ca.crt
+    #         - oidc-username-claim=email
+    #         - oidc-groups-claim=groups
+
+    # - name: Write yaml file
+    #   become: yes
+    #   ansible.builtin.copy:
+    #     # https://stackoverflow.com/questions/65139989/ansible-how-to-fix-to-nice-yaml-output-quotation-and-line-breaks
+    #     content: '{{ config | to_nice_yaml(indent=2) }}'
+    #     dest: /etc/rancher/k3s/config.yaml
+    #   notify:
+    #     - "Restart k3s service"
 
     # - name: update k3s service config
     #   become: yes
