--- a/AnsibleWorkShop/roles/infra-kube-resources/templates/Dex/values.yaml
+++ b/AnsibleWorkShop/roles/infra-kube-resources/templates/Dex/values.yaml
@@ -35,10 +35,10 @@ config:
     config:
       inCluster: true
 
-  web:
-      http: 0.0.0.0:5556
-      # tlsCert: /etc/dex/tls/tls.crt
-      # tlsKey: /etc/dex/tls/tls.key
+  # web:
+  #   http: 0.0.0.0:5556
+    # tlsCert: /etc/dex/tls/tls.crt
+    # tlsKey: /etc/dex/tls/tls.key
       
   # frontend:
   #   theme: "coreos"
