--- a/AnsibleWorkShop/roles/infra-kube-resources/tasks/main.yml
+++ b/AnsibleWorkShop/roles/infra-kube-resources/tasks/main.yml
@@ -5,31 +5,31 @@
     ansible.builtin.include_tasks: Confirm-KubeConfig.yml
     register: Confirm_KubeConfig
 
-  - name: Install CertMan
-    # https://docs.ansible.com/ansible/latest/collections/ansible/builtin/include_tasks_module.html
-    ansible.builtin.include_tasks: Install-CertMan.yml
-    register: Install_CertMan
-    when: Confirm_KubeConfig is succeeded
+  # - name: Install CertMan
+  #   # https://docs.ansible.com/ansible/latest/collections/ansible/builtin/include_tasks_module.html
+  #   ansible.builtin.include_tasks: Install-CertMan.yml
+  #   register: Install_CertMan
+  #   when: Confirm_KubeConfig is succeeded
 
-  - name: Install Traefik
-    ansible.builtin.include_tasks: Install-Traefik.yml
-    register: Install_Traefik
-    when: Install_CertMan is succeeded
+  # - name: Install Traefik
+  #   ansible.builtin.include_tasks: Install-Traefik.yml
+  #   register: Install_Traefik
+  #   when: Install_CertMan is succeeded
 
   - name: Install Dex
     ansible.builtin.include_tasks: Install-Dex.yml
     register: Install_Dex
-    when: Install_Traefik is succeeded
+    # when: Install_Traefik is succeeded
 
-  - name: Set CoreDNS
-    ansible.builtin.include_tasks: Set-CoreDNS.yml
-    register: Set_CoreDNS
-    when: Install_Dex is succeeded
+  # - name: Set CoreDNS
+  #   ansible.builtin.include_tasks: Set-CoreDNS.yml
+  #   register: Set_CoreDNS
+  #   when: Install_Dex is succeeded
 
-  - name: Install Loginapp
-    ansible.builtin.include_tasks: Install-Loginapp.yml
-    register: Set_Loginapp
-    when: Set_CoreDNS is succeeded
+  # - name: Install Loginapp
+  #   ansible.builtin.include_tasks: Install-Loginapp.yml
+  #   register: Set_Loginapp
+  #   when: Set_CoreDNS is succeeded
 
   # - name: Install kubernetes dashboard
   #   ansible.builtin.include_tasks: Install-KubeDashboard.yml
