--- a/AnsibleWorkShop/roles/infra-kube-resources/tasks/Install-CertMan.yml
+++ b/AnsibleWorkShop/roles/infra-kube-resources/tasks/Install-CertMan.yml
@@ -6,6 +6,9 @@
       kubernetes.core.helm_repository:
         name: bitnami
         repo_url: "https://charts.bitnami.com/bitnami"
+      register: bitnamiHelmRepo
+      retries: 10
+      until: bitnamiHelmRepo is not failed
 
     - name: Install Cert Manager helm chart
       kubernetes.core.helm:
@@ -18,7 +21,7 @@
         values:
           installCRDs: true
       register: certManHelm
-      retries: 10
+      retries: 3
       until: certManHelm is not failed
 
     # - name: Debug template
