add smb csi config

--- a/HelmWorkShop/powerdns/values-sololab.yaml
+++ b/HelmWorkShop/powerdns/values-sololab.yaml
@@ -143,6 +143,9 @@ powerdns:
 mariadb:
   enabled: true
 
+  global:
+    storageClass: smb
+
   auth:
     rootPassword: root
     database: powerdns
