--- a/HelmWorkShop/kube-dashboard/values.yaml
+++ b/HelmWorkShop/kube-dashboard/values.yaml
@@ -1,11 +1,13 @@
-# https://github.com/kubernetes/dashboard/blob/master/aio/deploy/helm-chart/kubernetes-dashboard/values.yaml
+# https://github.com/kubernetes/dashboard/blob/master/charts/helm-chart/kubernetes-dashboard/values.yaml
 # Additional container arguments
 # replicaCount: 3
 
 extraArgs:
 # https://github.com/kubernetes/dashboard/blob/master/docs/user/access-control/README.md#login-view
+# https://github.com/kubernetes/dashboard/blob/master/docs/common/dashboard-arguments.md
   - --enable-skip-login
   - --system-banner="Welcome to Infra.SoloLab"
+  - --token-ttl=1800
 
 ingress:
   ## If true, Kubernetes Dashboard Ingress will be created.
