--- a/VagrantWorkShop/VyOS-New/Vagrantfile
+++ b/VagrantWorkShop/VyOS-New/Vagrantfile
@@ -12,8 +12,9 @@ Vagrant.configure("2") do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
+  config.ssh.insert_key = false
   config.vm.box = "VYOS14x-WAN-G2"
-  config.vm.network "private_network", bridge: "Default Switch"
+  # config.vm.network "private_network", bridge: "Default Switch"
   
   config.vm.provider "hyperv" do |hv, config|
     hv.vmname = "VYOS14x-G2"
